[package]
name = "webfang_core"
description = "Core scraping library — domain, application, and infrastructure layers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = ["images", "documents"]
images = ["dep:mimetype-detector"]
documents = ["dep:mimetype-detector"]
persistence = ["dep:rusqlite", "dep:deadpool-sqlite", "dep:sys-info"]
console = ["dep:console-subscriber"]
dev-tracing = ["dep:tracing-tree"]
otel = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
]
otel-metrics = [
    "otel",
    "opentelemetry/metrics",
    "opentelemetry_sdk/metrics",
    "opentelemetry_sdk/rt-tokio",
    "opentelemetry-otlp/metrics",
]
# Marker features for backward-compatible cfg gates.
# These are activated by dependent crates (ai, tui, mcp) to preserve
# existing cfg(feature) gates in core during the transition period.
ai = []
ui = []
mcp = []

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
toml = "0.8"
pathdiff = "0.2"

# Async runtime
tokio = { workspace = true }

# HTTP & Networking
wreq = { workspace = true }
wreq-util = { workspace = true }
bytes = { workspace = true }

# Content Extraction
legible = { workspace = true }
htmd = { workspace = true }
strsim = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# HTML Parsing
scraper = { workspace = true }
lol_html = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
tracing-tree = { workspace = true, optional = true }

# OpenTelemetry
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }

# tokio-console
console-subscriber = { workspace = true, optional = true }

# Utilities
url = { workspace = true }
percent-encoding = { workspace = true }
globset = { workspace = true }
futures = { workspace = true }
regex = { workspace = true }
heck = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
dirs = { workspace = true }
num_cpus = { workspace = true }
once_cell = { workspace = true }
uuid = { workspace = true }
walkdir = { workspace = true }
fs2 = { workspace = true }
sysinfo = { workspace = true }
aho-corasick = { workspace = true }
whatlang = { workspace = true }
url-normalize = { workspace = true }
secrecy = { workspace = true }

# HTML to Markdown
html-to-markdown-rs = { workspace = true }
syntect = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }

# XML
quick-xml = { workspace = true }

# Rate limiting
governor = { workspace = true }
dashmap = { workspace = true }
ahash = { workspace = true }

# Progress
indicatif = { workspace = true }

# Markdown parsing
pulldown-cmark = { workspace = true }

# Async compression
async-compression = { workspace = true }

# Security
rustls-webpki = { workspace = true }
time = { workspace = true }

# Competitive Features
jzon-rs-serde = { workspace = true }
crc32fast = { workspace = true }
robotstxt = { workspace = true }

# MIME detection (optional)
mimetype-detector = { workspace = true, optional = true }

# SQLite persistence (feature-gated)
rusqlite = { workspace = true, optional = true }
deadpool-sqlite = { workspace = true, optional = true }
sys-info = { workspace = true, optional = true }

# CPU pool
rayon = "1.10"

[build-dependencies]
built = { version = "0.7", features = ["git2", "chrono"] }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
wiremock = { workspace = true }
proptest = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }
insta = { workspace = true }
regex = { workspace = true }

# ---------------------------------------------------------------------------
# Wiring for the previously-orphaned root `tests/` suite.
#
# These `[[test]]` targets point at the root `tests/` tree (outside this
# crate's directory) so the CLI behavioral / integration tests become
# runnable as part of the `webfang_core` test build. They are owned by
# `webfang_core` for dependency purposes; the binaries they exercise
# (`webfang`) live in the `webfang_cli` crate.
# ---------------------------------------------------------------------------
[[test]]
name = "behavioral"
path = "../../tests/behavioral/main.rs"

[[test]]
name = "cli_binary"
path = "../../tests/cli_binary_test.rs"

[[test]]
name = "cli_behavioral"
path = "../../tests/cli_behavioral_test.rs"

[lints.clippy]
doc_markdown = "allow"
uninlined_format_args = "allow"
needless_raw_string_hashes = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"
redundant_closure = "allow"
match_same_arms = "allow"
items_after_statements = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
too_many_lines = "allow"
too_many_arguments = "allow"
struct_excessive_bools = "allow"
struct_field_names = "allow"
similar_names = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
default_trait_access = "allow"
doc_link_with_quotes = "allow"
wildcard_imports = "allow"
enum_glob_use = "allow"
explicit_iter_loop = "allow"
explicit_into_iter_loop = "allow"
map_unwrap_or = "allow"
if_not_else = "allow"
manual_let_else = "allow"
needless_continue = "allow"
needless_pass_by_value = "allow"
return_self_not_must_use = "allow"
single_match_else = "allow"
trivially_copy_pass_by_ref = "allow"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(feature, values("ai", "ui", "mcp"))'] }
