[package]
name = "webfang_mcp"
description = "Model Context Protocol server for webfang"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
mcp = ["webfang_core/mcp"]

[dependencies]
webfang_core = { workspace = true }

# MCP
rmcp = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
schemars = { workspace = true }

# Async
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utilities
url = { workspace = true }
url-normalize = { workspace = true }
wreq = { workspace = true }

[dev-dependencies]
webfang_core = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
schemars = { workspace = true }
insta = { workspace = true }
scraper = { workspace = true }
wiremock = { workspace = true }

[[test]]
name = "discover_sitemap_wiremock"
path = "tests/discover_sitemap_wiremock.rs"

[[test]]
name = "mcp_behavioral_test"
path = "../../tests/mcp_behavioral_test.rs"

[[test]]
name = "mcp_lifecycle_test"
path = "../../tests/mcp_lifecycle_test.rs"

[lints.clippy]
doc_markdown = "allow"
uninlined_format_args = "allow"
